<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:id="@+id/parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_marginTop="8dp"
        android:padding="0dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/summName"
            android:layout_width="0px"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/introducesummname"
            android:enabled="true"/>
        <Spinner
            android:id="@+id/regionsSpinner"
            android:layout_marginLeft="8dp"
            android:layout_width="wrap_content"
            android:layout_weight="0"
            android:layout_height="wrap_content"
            />

        </LinearLayout>

    <LinearLayout
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:padding="0dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skip"
            android:id="@+id/btnSkip" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:layout_marginLeft="8dp"
            android:id="@+id/btnNext" />


    </LinearLayout>
</LinearLayout>
